@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-09T16:17:54Z",
-  "count" : 205,
-  "count_minmax" : [ 112, 205 ],
-  "count_decinc" : [ -0, +205 ],
+  "timestamp" : "2024-02-10T01:02:34Z",
+  "count" : 300,
+  "count_minmax" : [ 112, 300 ],
+  "count_decinc" : [ -0, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
