@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-02-09T16:17:54Z",
-  "count_outdated" : 186123,
-  "uniques_outdated" : 1918,
-  "count" : 190539,
+  "timestamp" : "2024-02-10T01:02:34Z",
+  "count_outdated" : 186424,
+  "uniques_outdated" : 1920,
+  "count" : 190634,
   "uniques" : 1950,
   "clones" : [
     {
-      "timestamp": "2024-01-26T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 301 ],
-      "count_decinc": [ 261, 301 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2024-01-27T00:00:00Z",
-      "count": 302,
+      "count": 226,
       "count_minmax": [ 112, 302 ],
-      "count_decinc": [ 0, 302 ],
+      "count_decinc": [ 76, 302 ],
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 0, 3 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-09T00:00:00Z",
-      "count": 205,
-      "count_minmax": [ 112, 205 ],
-      "count_decinc": [ 0, 205 ],
+      "count": 300,
+      "count_minmax": [ 112, 300 ],
+      "count_decinc": [ 0, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
